--- a/src/main/resources/com/example/demo/quizCreate.fxml
+++ b/src/main/resources/com/example/demo/quizCreate.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="1297.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createQuizController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1306.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createQuizController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;">
          <children>
@@ -123,11 +122,12 @@
             <Insets right="495.0" top="30.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="527.0" promptText="Title">
+      <TextField fx:id="quizTitle" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#quizTitleValidation" prefHeight="31.0" prefWidth="527.0" promptText="Title">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
+      <Text fx:id="quizTitleErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="522.0" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -136,11 +136,12 @@
             <Insets right="440.0" top="30.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="Description">
+      <TextField fx:id="quizDescription" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#quizDescriptionValidation" prefHeight="31.0" prefWidth="523.0" promptText="Description">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
+      <Text fx:id="quizDescriptionErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="520.0" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Theme">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -149,15 +150,12 @@
             <Insets right="470.0" top="30.0" />
          </VBox.margin>
       </Text>
-      <SplitMenuButton maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="520.0" text="Theme">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-         </items>
+      <SplitMenuButton fx:id="quizTheme" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onKeyTyped="#quizThemeValidation" prefHeight="25.0" prefWidth="520.0" text="Theme">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </SplitMenuButton>
+      <Text fx:id="quizThemeErrorMessage" fill="#c51b1b" layoutX="403.0" layoutY="362.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="520.0" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Content">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -166,11 +164,12 @@
             <Insets right="465.0" top="30.0" />
          </VBox.margin>
       </Text>
-      <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="523.0" promptText="Quizizz Link">
+      <TextField fx:id="quizContent" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#quizContentValidation" prefHeight="31.0" prefWidth="523.0" promptText="Quizizz Link">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
+      <Text fx:id="quizContentErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="522.0" />
       <Button mnemonicParsing="false" text="Create">
          <VBox.margin>
             <Insets top="40.0" />
