--- a/src/main/resources/com/example/demo/eventCreate.fxml
+++ b/src/main/resources/com/example/demo/eventCreate.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,26 +12,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="1198.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="1198.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
    <children>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;">
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="43.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="230.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
             <Pane prefHeight="71.0" prefWidth="587.0">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -59,7 +50,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
+                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -106,12 +97,12 @@
             <Insets />
          </VBox.margin>
       </HBox>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Create Event">
+      <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Event">
          <font>
             <Font name="Showcard Gothic" size="30.0" />
          </font>
          <VBox.margin>
-            <Insets top="20.0" />
+            <Insets top="35.0" />
          </VBox.margin>
       </Text>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Title">
@@ -224,7 +215,7 @@
       </Text>
       <Button mnemonicParsing="false" onAction="#createEvent" text="Create">
         <VBox.margin>
-            <Insets bottom="15.0" top="40.0" />
+            <Insets bottom="30.0" top="15.0" />
         </VBox.margin>
 </Button>
    </children>
