--- a/src/main/resources/com/example/demo/eventCreate.fxml
+++ b/src/main/resources/com/example/demo/eventCreate.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,18 +13,26 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="1198.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="1194.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
    <children>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;">
          <children>
-            <ImageView fitHeight="43.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@logowithbg.png" />
+                  <Image url="@../../../icon.png" />
                </image>
             </ImageView>
+            <Label prefHeight="22.0" prefWidth="230.0" text="HTF" textFill="#3c1f15">
+               <font>
+                  <Font name="Showcard Gothic" size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="10.0" top="25.0" />
+               </HBox.margin>
+            </Label>
             <Pane prefHeight="71.0" prefWidth="587.0">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -50,7 +59,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
+                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -97,12 +106,12 @@
             <Insets />
          </VBox.margin>
       </HBox>
-      <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Event">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Create Event">
          <font>
             <Font name="Showcard Gothic" size="30.0" />
          </font>
          <VBox.margin>
-            <Insets top="35.0" />
+            <Insets top="20.0" />
          </VBox.margin>
       </Text>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Title">
@@ -123,12 +132,12 @@
             <Insets />
          </VBox.margin>
       </Text>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description (&lt; 100 characters)">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description (&lt; 100 words)">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="300.0" top="15.0" />
+            <Insets right="335.0" top="15.0" />
          </VBox.margin>
       </Text>
       <TextField fx:id="eventDescription" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#eventDescriptionValidation" prefHeight="31.0" prefWidth="523.0" promptText="Description">
@@ -159,17 +168,46 @@
             <Insets right="5.0" />
          </VBox.margin>
       </Text>
+      <Text opacity="0.58" strokeType="OUTSIDE" strokeWidth="0.0" text="Latitude (X) :" wrappingWidth="80.66667429606116">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+         <VBox.margin>
+            <Insets right="440.0" top="5.0" />
+         </VBox.margin>
+      </Text>
+      <Text layoutX="348.0" layoutY="416.0" opacity="0.58" strokeType="OUTSIDE" strokeWidth="0.0" text="Longitude (Y) :" wrappingWidth="105.46666161219275">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="-15.0" />
+         </VBox.margin>
+      </Text>
+      <TextField fx:id="eventVenueLongitude" alignment="CENTER" editable="false" layoutX="430.0" layoutY="413.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="86.0" text="-">
+         <VBox.margin>
+            <Insets left="640.0" right="480.0" top="-20.0" />
+         </VBox.margin>
+      </TextField>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="488.0" top="15.0" />
+            <Insets right="488.0" top="20.0" />
          </VBox.margin>
       </Text>
+      <TextField fx:id="eventVenueLatitude" alignment="CENTER" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="86.0" text="-">
+         <VBox.margin>
+            <Insets left="420.0" right="700.0" top="-65.0" />
+         </VBox.margin>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </TextField>
       <DatePicker fx:id="eventDate" editable="false" onKeyTyped="#eventDateValidation" prefHeight="31.0" prefWidth="521.0" promptText="DD/MM/YYYY">
          <VBox.margin>
-            <Insets top="10.0" />
+            <Insets top="50.0" />
          </VBox.margin>
       </DatePicker>
       <Text fx:id="eventDateErrorMessage" fill="#c51b1b" layoutX="352.0" layoutY="416.0" onKeyTyped="#eventDateValidation" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="520.0">
@@ -186,7 +224,7 @@
          </VBox.margin>
       </Text>
       <TextField fx:id="eventStartTime" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#eventStartTimeValidation" prefHeight="31.0" prefWidth="523.0" promptText="11:30 am">
-          <VBox.margin>
+         <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
@@ -195,7 +233,7 @@
             <Insets />
          </VBox.margin>
       </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time End">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time End">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
@@ -204,19 +242,19 @@
          </VBox.margin>
       </Text>
       <TextField fx:id="eventEndTime" maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#eventEndTimeValidation" prefHeight="31.0" prefWidth="523.0" promptText="1:30 pm">
-          <VBox.margin>
+         <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
       <Text fx:id="eventEndTimeErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="523.0">
-        <VBox.margin>
+         <VBox.margin>
             <Insets />
-        </VBox.margin>
+         </VBox.margin>
       </Text>
-      <Button mnemonicParsing="false" onAction="#createEvent" text="Create">
-        <VBox.margin>
-            <Insets bottom="30.0" top="15.0" />
-        </VBox.margin>
-</Button>
+      <Button mnemonicParsing="false" onAction="#createEvent" prefHeight="26.0" prefWidth="85.0" text="Create">
+         <VBox.margin>
+            <Insets bottom="15.0" top="40.0" />
+         </VBox.margin>
+      </Button>
    </children>
 </VBox>
