--- a/src/main/resources/com/example/demo/booking.fxml
+++ b/src/main/resources/com/example/demo/booking.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="705.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
@@ -110,7 +109,7 @@
                   <Insets left="20.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <ChoiceBox fx:id="destinationChoiceBox" prefHeight="25.0" prefWidth="191.33333333333334">
+            <ChoiceBox fx:id="destinationChoiceBox" onMouseClicked="#destinationSelected" prefHeight="25.0" prefWidth="191.33333333333334">
                <VBox.margin>
                   <Insets left="20.0" top="10.0" />
                </VBox.margin>
@@ -123,7 +122,7 @@
                   <Insets left="20.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <TextArea fx:id="timeSlotsTextArea" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="timeSlotsTextArea" editable="false" prefHeight="200.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets left="20.0" right="20.0" top="10.0" />
                </VBox.margin>
@@ -141,7 +140,7 @@
                   <Insets left="20.0" top="10.0" />
                </VBox.margin>
             </ChoiceBox>
-            <Button mnemonicParsing="false" text="Booking">
+            <Button mnemonicParsing="false" onAction="#bookDestination" text="Booking">
                <VBox.margin>
                   <Insets bottom="20.0" left="250.0" right="100.0" top="-26.0" />
                </VBox.margin>
