--- a/src/main/resources/com/example/demo/booking.fxml
+++ b/src/main/resources/com/example/demo/booking.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="705.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="654.0" prefWidth="705.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
          <children>
@@ -99,9 +99,9 @@
             <Insets top="30.0" />
          </VBox.margin>
       </Text>
-      <VBox prefHeight="436.0" prefWidth="1219.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+      <VBox prefHeight="401.0" prefWidth="476.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination ID for Booking:">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Booking for:">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
@@ -109,9 +109,22 @@
                   <Insets left="20.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <ChoiceBox fx:id="destinationChoiceBox" onMouseClicked="#destinationSelected" prefHeight="25.0" prefWidth="191.33333333333334">
+            <ChoiceBox prefHeight="25.0" prefWidth="191.0">
                <VBox.margin>
                   <Insets left="20.0" top="10.0" />
+               </VBox.margin>
+            </ChoiceBox>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination for Booking:">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="300.0" top="-53.0" />
+               </VBox.margin>
+            </Text>
+            <ChoiceBox fx:id="destinationChoiceBox" onMouseClicked="#destinationSelected" prefHeight="25.0" prefWidth="191.33333333333334">
+               <VBox.margin>
+                  <Insets left="300.0" top="10.0" />
                </VBox.margin>
             </ChoiceBox>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Time Slot">
@@ -122,7 +135,7 @@
                   <Insets left="20.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <TextArea fx:id="timeSlotsTextArea" editable="false" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="timeSlotsTextArea" editable="false" prefHeight="158.0" prefWidth="436.0">
                <VBox.margin>
                   <Insets left="20.0" right="20.0" top="10.0" />
                </VBox.margin>
