--- a/src/main/resources/com/example/demo/homePage.fxml
+++ b/src/main/resources/com/example/demo/homePage.fxml
@@ -187,7 +187,7 @@
                   <Font name="Showcard Gothic" size="20.0" />
                </font>
                <VBox.margin>
-                  <Insets left="50.0" />
+                  <Insets left="50.0" top="20.0" />
                </VBox.margin>
             </Text>
             <Button mnemonicParsing="false" onAction="#refresh" text="Refresh">
@@ -198,7 +198,7 @@
                   <Insets left="1078.0" top="-30.0" />
                </VBox.margin>
             </Button>
-            <ScrollPane fx:id="discussion" hbarPolicy="NEVER" maxWidth="-Infinity" prefHeight="200.0" prefWidth="1100.0">
+            <ScrollPane fx:id="discussion" hbarPolicy="NEVER" maxWidth="-Infinity" prefHeight="245.0" prefWidth="1100.0">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
